# botty

./: .gitignore  .ruff.toml  pyproject.toml
botty/: __init__.py  __main__.py  app.py  config.py  env.py  errors.py  handler.py  helpers.py  loader.py  telegram_object.py  texts.py
botty/buttons/: __init__.py  callback.py  url.py
botty/contexts/: __init__.py  query.py  text.py  update.py
botty/handlers/: __init__.py  command.py  composite.py  handler.py  handlers.py  inline_menu.py  message.py  query.py  start.py  text.py  types.py  update.py
botty/handlers/classes/: __init__.py  command.py  message.py  query.py  start.py  text.py  update.py
botty/keyboards/: __init__.py  inline.py
botty/types/: __init__.py  bot.py  chat.py  message.py  query.py  update.py  user.py
botty_core/: __init__.py  app.py  context.py  env.py  helpers.py  ptb_types.py  texts.py
botty_core/handlers/: __init__.py  composite.py  handler.py
botty_core/types/: __init__.py  bot.py  chat.py  message.py  object.py  query.py  update.py  user.py
tests/: __main__.py
