[project]
name = "telegram-botty"
version = "0.1.1"
description = ""
authors = [
    { name = "levch", email = "levchenko.d.a1998@gmail.com" },
]
dependencies = [
    "python-telegram-bot>=20.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.257",
    "mypy>=1.1.1",
]

[tool.pdm.scripts]
start = { cmd = "python botty", env_file = ".env" }
mypy = "mypy botty --strict"
ruff = "ruff check botty"
check = { composite = ["mypy", "ruff"] }
dev = { composite = ["check", "start"] }
