[project]
name = "telegram-botty"
version = "0.1.5"
description = ""
authors = [
    { name = "levch", email = "levchenko.d.a1998@gmail.com" },
]
dependencies = [
    "python-telegram-bot>=20.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "stricter>=0.1.3",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.pdm.scripts]
test = { cmd = "python tests", env_file = ".env" }
lint = "python -m stricter"
dev = { composite = ["lint", "test"] }

[tool.ruff]
src = ["botty"]

[tool.isort]
profile = "black"
